# vizion3D

./: .gitignore  404.html  LICENSE  README.md  Taskfile.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: apisec-scan.yml  ci.yml  docs.yml  enforce-release-branch.yml  publish.yml
api/lifting/: index.html
docs/: CNAME  hardware_acceleration.md  index.md
docs/annotation/: object_mask_annotation_3d.md  scene_mask_annotation_3d.md  yoloe_26l_prompt_free_classes.md
docs/api/: lifting.md  observation.md  reconstruction.md
docs/assets/reconstruction/: object_sample_mesh.ply  object_sample_point_cloud.ply  sample_summary.json  scene_component_01_mesh.ply  scene_component_01_point_cloud.ply
docs/concepts/: camera_intrinsics.md
docs/features/: depth_estimation.md  depth_estimation_advanced_config.md  depth_estimation_vs_stereo_depth.md  stereo_depth.md  structure_from_motion.md
docs/observation/: scale_observation.md
docs/reconstruction/: object_3d_reconstruction.md  scene_components_3d_reconstruction.md
docs/tasks/: index.md
features/depth_estimation/: index.html
search/: search_index.json
tests/: conftest.py  test_depth_values.py  test_facade.py  test_hf.py  test_lifting_defaults.py  test_ply.py
tests/assets/stereo/teddy/: SOURCE.md
tests/integration/: conftest.py  test_depth_estimation_direct.py  test_depth_estimation_grpc.py  test_depth_estimation_rest.py  test_direct.py  test_grpc.py  test_object_mask_annotation_3d_direct.py  test_object_mask_annotation_3d_grpc.py  test_object_mask_annotation_3d_rest.py  test_reconstruction_direct.py  test_reconstruction_grpc.py  test_reconstruction_rest.py  test_rest.py  test_scale_observation.py  test_scene_mask_annotation_3d_direct.py  test_scene_mask_annotation_3d_grpc.py  test_scene_mask_annotation_3d_rest.py  test_stereo_depth_direct.py  test_stereo_depth_grpc.py  test_stereo_depth_rest.py  test_stereo_direct.py  test_stereo_grpc.py  test_stereo_rest.py
tests/unit/: test_advanced_config.py  test_coordinate_space.py  test_depth_estimation_advanced_config.py  test_depth_estimation_defaults.py  test_depth_estimation_facade.py  test_depth_estimation_grpc.py  test_depth_estimation_stereo_depth_rest_api.py  test_grpc.py  test_lifting_defaults.py  test_object_mask_annotation_3d_config.py  test_object_mask_annotation_3d_handler.py  test_ply.py  test_reconstruction.py  test_rest_api.py  test_scale_observation.py  test_scene_mask_annotation_3d_config.py  test_scene_mask_annotation_3d_handler.py  test_segformer_backend.py  test_stereo_depth_config.py  test_stereo_depth_handler.py  test_task_registry.py
vision3d/core/: cqrs.py
vision3d/lifting/: __init__.py  commands.py  defaults.py  depth_anything.py  handlers.py  utils.py
vision3d/proto/: lifting.proto  lifting_pb2.py  lifting_pb2_grpc.py  reconstruction.proto  reconstruction_pb2.py  reconstruction_pb2_grpc.py
vision3d/reconstruction/: __init__.py  commands.py  handlers.py  models.py
vision3d/server/grpc/: server.py
vision3d/server/rest/: app.py
vizion3d/annotation/: __init__.py  _geometry.py  commands.py  defaults.py  handlers.py  models.py  scene_defaults.py  scene_handlers.py  segformer.py
vizion3d/core/: container.py  tasks.py
vizion3d/lifting/: __init__.py  commands.py  defaults.py  depth_anything.py  handlers.py  models.py  utils.py
vizion3d/observation/: __init__.py  commands.py  defaults.py  handlers.py  models.py  scale.py
vizion3d/proto/: __init__.py  lifting.proto  lifting_pb2.py  lifting_pb2_grpc.py
vizion3d/reconstruction/: __init__.py  commands.py  defaults.py  handlers.py  models.py
vizion3d/server/: jobs.py
vizion3d/server/grpc/: server.py
vizion3d/server/rest/: app.py  depth_estimation.py  object_mask_annotation_3d.py  reconstruction.py  scale_observation.py  scene_mask_annotation_3d.py  serialisation.py  stereo_depth.py
vizion3d/stereo/: __init__.py  commands.py  defaults.py  handlers.py  models.py
vizion3d/stereo/arch/: __init__.py  attention.py  components.py  refiners.py  s2m2.py  utils.py
