[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizion3d"
version = "1.0.0"
description = "U3D Capability and Intelligence for the real world. "
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = [
    "3d", "computer-vision", "depth-estimation", "point-cloud",
    "mesh", "reconstruction", "nerf", "slam", "lidar", "ai", 
    "artificial intelligence", "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "clean-ioc>=1.3.0",
    "pydantic>=2.0.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "transformers>=5.6.2",
    "pillow>=12.2.0",
    "open3d>=0.18.0",
    "orjson>=3.9.0",
    "ultralytics>=8.3.0",
]

# ---------------------------------------------------------------------------
# Hardware extras
#
# cpu / mps
#   Wheels are on PyPI — pip resolves them automatically.
#
#   pip install vizion3d[cpu]
#   pip install vizion3d[mps]
#
# cuda
#   CUDA wheels bundle their own NCCL and are NOT on PyPI.
#   Install the matching wheel BEFORE `pip install vizion3d[cuda]`.
#   Using pinned versions avoids NCCL symbol mismatches (e.g. ncclCommWindowDeregister).
#
#   CUDA 12.4 (recommended):
#     pip install torch==2.5.1+cu124 torchvision==0.20.1+cu124 \
#       --index-url https://download.pytorch.org/whl/cu124
#
#   CUDA 12.1:
#     pip install torch==2.5.1+cu121 torchvision==0.20.1+cu121 \
#       --index-url https://download.pytorch.org/whl/cu121
#
#   CUDA 11.8:
#     pip install torch==2.5.1+cu118 torchvision==0.20.1+cu118 \
#       --index-url https://download.pytorch.org/whl/cu118
#
# amd
#   ROCm wheels are also NOT on PyPI.  Install first:
#
#   ROCm 6.2 (recommended):
#     pip install torch==2.5.1+rocm6.2 torchvision==0.20.1+rocm6.2 \
#       --index-url https://download.pytorch.org/whl/rocm6.2
#
#   ROCm 6.1:
#     pip install torch==2.5.1+rocm6.1 torchvision==0.20.1+rocm6.1 \
#       --index-url https://download.pytorch.org/whl/rocm6.1
#
# Colab
#   torch + CUDA is pre-installed — do not use any extras:
#     pip install vizion3d --no-deps
#     pip install fastapi "clean-ioc>=1.3.0" "pydantic>=2.0.0" grpcio grpcio-tools \
#       uvicorn python-multipart "transformers>=5.6.2" "pillow>=12.2.0" "open3d>=0.18.0"
#
# If a matching torch is already present, pip will not downgrade it.
# ---------------------------------------------------------------------------
[project.optional-dependencies]
cpu  = ["torch>=2.4.0", "torchvision>=0.19.0"]
mps  = ["torch>=2.4.0", "torchvision>=0.19.0"]
cuda = []
amd  = []

[project.urls]
Homepage = "https://github.com/OlafenwaMoses/vizion3D"
Documentation = "https://docs.vizion3d.org"
Repository = "https://github.com/OlafenwaMoses/vizion3D"
Issues = "https://github.com/OlafenwaMoses/vizion3D/issues"

[project.scripts]
vizion3d-serve-rest = "vizion3d.server.rest.app:run"
vizion3d-serve-grpc = "vizion3d.server.grpc.server:serve"

[dependency-groups]
dev = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.7.6,<10.0",
    "mkdocstrings[python]>=1.0.4",
    "pytest>=9.0.3",
    "ruff>=0.9.0",
    "twine>=6.0.0",
]

# ---------------------------------------------------------------------------
# Hatch build — wheel & sdist
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["vizion3d"]

[tool.hatch.build.targets.sdist]
include = [
    "vizion3d/",
    "tests/",
    "mkdocs.yml",
    "README.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*_pb2*.py", "stereo_sample.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
